Closed Bug 403244 Opened 17 years ago Closed 17 years ago

crash [@ Tokenizer::tokenizeHeaders]

Categories

(MailNews Core :: Filters, defect)

defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.9beta3

People

(Reporter: wsmwk, Assigned: mkmelin)

Details

(Keywords: crash, fixed1.8.1.12, topcrash)

Crash Data

Attachments

(1 file, 1 obsolete file)

topcrash (top 10)

All OS.  talkbacks below are 2.0.0.6.  not found in topcrasher lists for .0.5, .0.4, or any 1.5.x

The majority, but not all, mention closing thunderbird

TB37884662 Exiting after recieving 55th 7MB email.
TB37837104 just turned on the computer and clicked the icon
TB37828268 just initiating Thunderbird,and it failed to load
TB37828748 Looking at my email.
TB37749364 Closing the application

TB37749364 
Tokenizer::tokenizeHeaders  [mozilla/mailnews/extensions/bayesian-spam-filter/src/nsBayesianFilter.cpp, line 365]
TokenStreamListener::ProcessHeaders  [mozilla/mailnews/extensions/bayesian-spam-filter/src/nsBayesianFilter.cpp, line 745]
nsMimeHtmlDisplayEmitter::WriteHTMLHeaders  [mozilla/mailnews/mime/emitters/src/nsMimeHtmlEmitter.cpp, line 281]
nsMimeHtmlDisplayEmitter::EndHeader  [mozilla/mailnews/mime/emitters/src/nsMimeHtmlEmitter.cpp, line 382]
MimeMessage_parse_line  [mozilla/mailnews/mime/src/mimemsg.cpp, line 286]
convert_and_send_buffer  [mozilla/mailnews/mime/src/mimebuf.cpp, line 185]
mime_LineBuffer  [mozilla/mailnews/mime/src/mimebuf.cpp, line 273]
MimeObject_parse_buffer  [mozilla/mailnews/mime/src/mimeobj.cpp, line 284]
nsStreamConverter::OnDataAvailable  [mozilla/mailnews/mime/src/nsStreamConverter.cpp, line 911]
nsStreamListenerTee::OnDataAvailable  [mozilla/netwerk/base/src/nsStreamListenerTee.cpp, line 97]
nsOnDataAvailableEvent0::HandleEvent  [mozilla/netwerk/base/src/nsAsyncStreamListener.cpp, line 425]
nsStreamListenerEvent0::HandlePLEvent  [mozilla/netwerk/base/src/nsAsyncStreamListener.cpp, line 122]
0x778b0c24
nsBindingManager::QueryInterface  [mozilla/content/xbl/src/nsBindingManager.cpp, line 305]
0x4e8d0388
0xffe512e8


TB37884662 
Tokenizer::tokenizeHeaders  [mozilla/mailnews/extensions/bayesian-spam-filter/src/nsBayesianFilter.cpp, line 365]
TokenStreamListener::ProcessHeaders  [mozilla/mailnews/extensions/bayesian-spam-filter/src/nsBayesianFilter.cpp, line 745]
nsMimeHtmlDisplayEmitter::WriteHTMLHeaders  [mozilla/mailnews/mime/emitters/src/nsMimeHtmlEmitter.cpp, line 281]
nsMimeHtmlDisplayEmitter::EndHeader  [mozilla/mailnews/mime/emitters/src/nsMimeHtmlEmitter.cpp, line 382]
MimeMessage_parse_line  [mozilla/mailnews/mime/src/mimemsg.cpp, line 286]
convert_and_send_buffer  [mozilla/mailnews/mime/src/mimebuf.cpp, line 185]
mime_LineBuffer  [mozilla/mailnews/mime/src/mimebuf.cpp, line 273]
MimeObject_parse_buffer  [mozilla/mailnews/mime/src/mimeobj.cpp, line 284]
nsStreamConverter::OnDataAvailable  [mozilla/mailnews/mime/src/nsStreamConverter.cpp, line 911]
nsMailboxProtocol::ReadMessageResponse  [mozilla/mailnews/local/src/nsMailboxProtocol.cpp, line 603]
nsMailboxProtocol::ProcessProtocolState  [mozilla/mailnews/local/src/nsMailboxProtocol.cpp, line 701]
nsMsgProtocol::OnDataAvailable  [mozilla/mailnews/base/util/nsMsgProtocol.cpp, line 350]
nsInputStreamPump::OnStateTransfer  [mozilla/netwerk/base/src/nsInputStreamPump.cpp, line 494]
nsInputStreamPump::OnInputStreamReady  [mozilla/netwerk/base/src/nsInputStreamPump.cpp, line 398]
nsOutputStreamReadyEvent::EventHandler  [mozilla/xpcom/io/nsStreamUtils.cpp, line 121]
0x778b0c24
nsBidiPresUtils::ReorderUnicodeText  [mozilla/layout/base/nsBidiPresUtils.cpp, line 1241]
0x5b5ec38b
>not found in topcrasher lists for .0.5, .0.4, or any 1.5.x

this is now found to be incorrect - appears for 1.5.0.13 and 2.x updates prior to 0.6

caused by bayesian?
Component: General → MailNews: Filters
Product: Thunderbird → Core
QA Contact: general → filters
Version: 2.0 → unspecified
Attached patch proposed fix (obsolete) — Splinter Review
Another possibility would be to check mimehdrpar later, but i don't know if it's worth it.
Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Attachment #295969 - Flags: superreview?(bienvenu)
Attachment #295969 - Flags: review?(bienvenu)
Comment on attachment 295969 [details] [diff] [review]
proposed fix

thx, Magnus - can you just use NS_ENSURE_SUCCESS(rv, rv); ?

It makes sense that this could happen at shutdown.
Attachment #295969 - Flags: superreview?(bienvenu)
Attachment #295969 - Flags: superreview+
Attachment #295969 - Flags: review?(bienvenu)
Attachment #295969 - Flags: review+
Attached patch proposed fixSplinter Review
Actually, that doesn't work since it's a void method.
Looking at it some more, I think we might as well move mimehdrpar nearer to where it's used since it's used only for one case.
Attachment #295969 - Attachment is obsolete: true
Attachment #296000 - Flags: superreview?(bienvenu)
Attachment #296000 - Flags: review?(bienvenu)
Comment on attachment 296000 [details] [diff] [review]
proposed fix

sure, that's fine. There is also a form of NS_ENSURE_SUCCESS that works for void functions (iirc, NS_ENSURE_SUCCESS(rv,))
Attachment #296000 - Flags: superreview?(bienvenu)
Attachment #296000 - Flags: superreview+
Attachment #296000 - Flags: review?(bienvenu)
Attachment #296000 - Flags: review+
Seems so, would never have guessed NS_ENSURE_SUCCESS(rv, ) works! But it's very little used - only ~10 hits tree wide. 

Checking in mailnews/extensions/bayesian-spam-filter/src/nsBayesianFilter.cpp;
/cvsroot/mozilla/mailnews/extensions/bayesian-spam-filter/src/nsBayesianFilter.cpp,v  <--  nsBayesianFilter.cpp
new revision: 1.70; previous revision: 1.69
done

->FIXED
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M11
Comment on attachment 296000 [details] [diff] [review]
proposed fix

Requesting branch approval for this crasher.
Attachment #296000 - Flags: approval1.8.1.12?
Comment on attachment 296000 [details] [diff] [review]
proposed fix

approved for 1.8.1.12, a=dveditz for release-drivers
Attachment #296000 - Flags: approval1.8.1.12? → approval1.8.1.12+
MOZILLA_1_8_BRANCH
Checking in mailnews/extensions/bayesian-spam-filter/src/nsBayesianFilter.cpp;
/cvsroot/mozilla/mailnews/extensions/bayesian-spam-filter/src/nsBayesianFilter.cpp,v  <--  nsBayesianFilter.cpp
new revision: 1.50.4.6; previous revision: 1.50.4.5
Keywords: fixed1.8.1.12
Is there a good test we can run to verify this? Or should we just wait for release and confirm that the topcrash isn't as popular.

The most recent build for which there's a talkback report for is MozillaOrgThunderbird2Win322007121604 but I'm not sure we should call this verified until Thunderbird 2.0.0.12 has been released and the topcrash is not as popular.
Product: Core → MailNews Core
(In reply to comment #11)
> Is there a good test we can run to verify this? Or should we just wait for
> release and confirm that the topcrash isn't as popular.

ss, it will be possible when bug Bug 499926 (need TB20022 topcrash list) gets fixed. :)
v.fixed - this is no longer in topcrash list as of TB20022
Status: RESOLVED → VERIFIED
Crash Signature: [@ Tokenizer::tokenizeHeaders]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: