Bug 403244: crash [@ Tokenizer::tokenizeHeaders] r+sr=bienvenu